Update files